--- a/groups.css
+++ b/groups.css
@@ -8,6 +8,10 @@
     width: 100%;
 }
 
+body {
+    background-color: #0E0F0f;
+}
+
 .matchingButton{
     color: #ffd700;
     background-color: #0E0F0f;
@@ -31,6 +35,10 @@
     color:whitesmoke;
 }
 
+.col {
+    border: 1px solid #333;
+}
+
 #createGroupDiv{
     background-color: lightslategrey;
 }
@@ -39,6 +47,8 @@
     background-color: #0E0F0f;
     border: 1px solid #ffd700;
     margin-left: auto;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
 
 .container{
@@ -48,3 +58,6 @@
     margin-top: 2%;
 }
 
+img {
+    padding-top: 10px;
+}
